--- a/addons/mouton_fsm/plugin.cfg
+++ b/addons/mouton_fsm/plugin.cfg
@@ -1,7 +1,7 @@
 [plugin]
 
 name="Mouton's Node-Based FSMs"
-description="Simpl node-based Finite-State Machines, easily editable and inheritable !"
+description="Simple node-based Finite-State Machines, easily editable and inheritable !"
 author="MoutonDemocrate"
 version=""
 script="mouton_fsm.gd"
