--- a/addons/mouton_fsm/plugin.cfg
+++ b/addons/mouton_fsm/plugin.cfg
@@ -3,5 +3,5 @@
 name="Mouton's Node-Based FSMs"
 description="Simple node-based Finite-State Machines, easily editable and inheritable !"
 author="MoutonDemocrate"
-version=""
+version="1.1"
 script="mouton_fsm.gd"
